--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Guided Tour to Norway</title>
 </head>
 <body>
+    <!--Halyna Berdyk-->
     <header>
 <nav>
-    <img src="image/logo_Norway.png">
+    <img src="image/logo_Norway.png" alt="company's logo">
     <div class="logo">Norway</div>
     <ul class="menu">
         <li><a href="#ABOUT US">About Us</a></li>
@@ -20,7 +21,7 @@
     </ul>
 </nav>
 <div class ="banner">
-    <h2>- YOUR PERFECT JORNEY TO</h2>
+    <h2>-YOUR PERFECT JORNEY TO</h2>
     <h1>Norway</h1>
            <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <article class="next trip">
@@ -32,8 +33,34 @@
 </div>
     </header>
         <main>
-<section class="About Us" id="About Us"></section>
-
+<section class="about Us" id="ABOUT US">
+    <h2>-ABOUT US</h2>
+<div class="base info">
+    <p>Expertly crafted tours to Norway. 10 days of admiring nordic cities. fjords, and waterfalls.</p>
+</div>
+<div class="general info">
+    <p> We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the entire country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.</p>
+    <p> The program is carefully thought out, there are no more than 10 people in each group plus an English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
+    </div>
+    <div class="instruction">
+       <article>
+           <img src="image/image_zero-one.png" alt="first point">
+           <h2>Contact us</h2>
+           <p>Some tour conditions may be changed according to the season. To learn more about the program, please contact us.</p>
+       </article>
+       <article>
+           <img src="image/image_zero-two.png" alt="second point">
+           <h2>Pick a date</h2>
+           <p>We conduct tours all year round, almost every week, but the most comfortable weather for sightseeing is in summer.</p>
+       </article>
+       <article>
+           <img src="image/image_zero-three.png" alt="third point">
+           <h2>Start your jorney</h2>
+           <p>If necessary, we help you apply for a visa to Norway, as well as advise what things you should take with you.</p>
+       </article>
+    </div>
+</section>
         </main>
+    <!--Halyna Berdyk-->
 </body>
 </html>
