--- a/index.html
+++ b/index.html
@@ -1,66 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guided Tour to Norway</title>
 </head>
+
 <body>
     <!--Halyna Berdyk-->
     <header>
-<nav>
-    <img src="image/logo_Norway.png" alt="company's logo">
-    <div class="logo">Norway</div>
-    <ul class="menu">
-        <li><a href="#ABOUT US">About Us</a></li>
-        <li><a href="#PLACES">Itinerary</a></li>
-        <li><a href="#TESTIMONIALS">Testimonials</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contacts</a></li>
-        <li><a href="CONTACT US">Join Us</a></li>
-    </ul>
-</nav>
-<div class ="banner">
-    <h2>-YOUR PERFECT JORNEY TO</h2>
-    <h1>Norway</h1>
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<article class="next trip">
-<p>Next Trip to Norway</p>
-<p>$2300 | 17 NOV. - 22 NOV.</p>
-<p>10 days of travel in Norway</p>
-<p><a href="#PLACES">Read more</a></p>
-</article>
-</div>
+        <nav>
+            <img src="image/logo_Norway.png" alt="company's logo">
+            <div class="logo">Norway</div>
+            <ul class="menu">
+                <li><a href="#info">About Us</a></li>
+                <li><a href="#places">Itinerary</a></li>
+                <li><a href="#testimontials">Testimonials</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="#contact">Join Us</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <h2>-YOUR PERFECT JORNEY TO</h2>
+            <h1>Norway</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <article>
+                <p>Next Trip to Norway</p>
+                <p>$2300 | 17 NOV. - 22 NOV.</p>
+                <p>10 days of travel in Norway</p>
+                <p><a href="#places">Read more</a></p>
+            </article>
+        </div>
     </header>
-        <main>
-<section class="about Us" id="ABOUT US">
-    <h2>-ABOUT US</h2>
-<div class="base info">
-    <p>Expertly crafted tours to Norway. 10 days of admiring nordic cities. fjords, and waterfalls.</p>
-</div>
-<div class="general info">
-    <p> We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the entire country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.</p>
-    <p> The program is carefully thought out, there are no more than 10 people in each group plus an English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
-    </div>
-    <div class="instruction">
-       <article>
-           <img src="image/image_zero-one.png" alt="first point">
-           <h2>Contact us</h2>
-           <p>Some tour conditions may be changed according to the season. To learn more about the program, please contact us.</p>
-       </article>
-       <article>
-           <img src="image/image_zero-two.png" alt="second point">
-           <h2>Pick a date</h2>
-           <p>We conduct tours all year round, almost every week, but the most comfortable weather for sightseeing is in summer.</p>
-       </article>
-       <article>
-           <img src="image/image_zero-three.png" alt="third point">
-           <h2>Start your jorney</h2>
-           <p>If necessary, we help you apply for a visa to Norway, as well as advise what things you should take with you.</p>
-       </article>
-    </div>
-</section>
-        </main>
+    <main>
+        <section class="info" id="info">
+            <h2>-ABOUT US</h2>
+            <div class="base info">
+                <p>Expertly crafted tours to Norway. 10 days of admiring nordic cities. fjords, and waterfalls.</p>
+            </div>
+            <div class="general info">
+                <p> We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the
+                    entire country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.</p>
+                <p> The program is carefully thought out, there are no more than 10 people in each group plus an
+                    English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
+            </div>
+            <div class="instruction">
+                <article class="first">
+                    <img src="image/image_zero-one.png" alt="first point">
+                    <h2>Contact us</h2>
+                    <p>Some tour conditions may be changed according to the season. To learn more about the program,
+                        please contact us.</p>
+                </article>
+                <article class="second">
+                    <img src="image/image_zero-two.png" alt="second point">
+                    <h2>Pick a date</h2>
+                    <p>We conduct tours all year round, almost every week, but the most comfortable weather for
+                        sightseeing is in summer.</p>
+                </article>
+                <article class="third">
+                    <img src="image/image_zero-three.png" alt="third point">
+                    <h2>Start your jorney</h2>
+                    <p>If necessary, we help you apply for a visa to Norway, as well as advise what things you should
+                        take with you.</p>
+                </article>
+            </div>
+        </section>
+    </main>
     <!--Halyna Berdyk-->
 </body>
+
 </html>
