--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <li><a href="#places">Itinerary</a></li>
                 <li><a href="#testimontials">Testimonials</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacts</a></li>
-                <li><a href="#contact">Join Us</a></li>
+                <li><a href="#contact">Contacts</a></li>
+                <li><a href="#contacts">Join Us</a></li>
             </ul>
         </nav>
         <div class="banner">
