--- a/index.html
+++ b/index.html
@@ -71,6 +71,45 @@
         </section>
     </main>
     <!--Halyna Berdyk-->
+    <!--Halyna Berdyk-->>
+    <footer>
+        <div class="contact_info" id="contact">
+            <article class="email">
+                <img src="image/e-mail-icon.png" alt="email">
+                <h3>Write Us</h3>
+                <p><a href="mailto:galya.berdik@gmail.com">norway-tour@email.com</a></p>
+            </article>
+            <article class="location">
+                <img src="image/location-icon.png" alt="location">
+                <h3>Visit Us</h3>
+                <p>Tollbugata 15C, 0152 Oslo</p>
+            </article>
+            <article class="phone">
+                <img src="image/phone-icon.png" alt="phone">
+                <h3>Call Us</h3>
+                <p><a href="tel:+380989654568">+1(234)5678900</a></p>
+            </article>
+        </div>
+        <nav>
+            <img src="image/logo_Norway.png" alt="company's logo">
+            <div class="footer_logo">Norway</div>
+            <ul class="footer_menu">
+                <li><a href="#info">About Us</a></li>
+                <li><a href="#places">Itinerary</a></li>
+                <li><a href="#testimontials">Testimonials</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#contact">Contacts</a></li>
+                <li><a href="#contacts">Join Us</a></li>
+            </ul>
+            <ul class="icons_menu">
+                <li><a href="https://www.facebook.com/"><img src="image/facebook-icon.png" alt="facebook-icon"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="image/instagram-icon.png" alt="instagram-icon"></a>
+                </li>
+                <li><a href="https://www.youtube.com/"><img src="image/youtube-icon.png" alt="youtube-icon"></a></li>
+            </ul>
+        </nav>
+    </footer>
+     <!--Halyna Berdyk-->>
 </body>
 
 </html>
