--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <ul class="menu">
                 <li><a href="#info">About Us</a></li>
                 <li><a href="#places">Itinerary</a></li>
-                <li><a href="#testimontials">Testimonials</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#facebook">Blog</a></li>
                 <li><a href="#contact">Contacts</a></li>
                 <li><a href="#contacts">Join Us</a></li>
             </ul>
@@ -97,12 +97,12 @@
                 <li><a href="#info">About Us</a></li>
                 <li><a href="#places">Itinerary</a></li>
                 <li><a href="#testimontials">Testimonials</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#facebook">Blog</a></li>
                 <li><a href="#contact">Contacts</a></li>
                 <li><a href="#contacts">Join Us</a></li>
             </ul>
             <ul class="icons_menu">
-                <li><a href="https://www.facebook.com/"><img src="image/facebook-icon.png" alt="facebook-icon"></a></li>
+                <li><a href="https://www.facebook.com/" id="facebook"><img src="image/facebook-icon.png" alt="facebook-icon"></a></li>
                 <li><a href="https://www.instagram.com/"><img src="image/instagram-icon.png" alt="instagram-icon"></a>
                 </li>
                 <li><a href="https://www.youtube.com/"><img src="image/youtube-icon.png" alt="youtube-icon"></a></li>
