--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <ul class="footer_menu">
                 <li><a href="#info">About Us</a></li>
                 <li><a href="#places">Itinerary</a></li>
-                <li><a href="#testimontials">Testimonials</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#facebook">Blog</a></li>
                 <li><a href="#contact">Contacts</a></li>
                 <li><a href="#contacts">Join Us</a></li>
