--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guided Tour to Norway</title>
+    <link rel="stylesheet" href="css/index-header.css">
+    <link rel="stylesheet" href="css/index-main.css">
 </head>
 
 <body>
     <!--Halyna Berdyk-->
     <header>
         <nav>
-            <img src="image/logo_Norway.png" alt="company's logo">
-            <div class="logo">Norway</div>
+
+            <div class="logo">
+                <img src="image/logo_Norway.png" alt="company's logo">
+            </div>
             <ul class="menu">
                 <li><a href="#info">About Us</a></li>
                 <li><a href="#places">Itinerary</a></li>
@@ -23,7 +27,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <h2>-YOUR PERFECT JORNEY TO</h2>
+            <h2>YOUR PERFECT JORNEY TO</h2>
             <h1>Norway</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -38,11 +42,11 @@
     </header>
     <main>
         <section class="info" id="info">
-            <h2>-ABOUT US</h2>
-            <div class="base info">
-                <p>Expertly crafted tours to Norway. 10 days of admiring nordic cities. fjords, and waterfalls.</p>
+            <h2>ABOUT US</h2>
+            <div class="base-info">
+                <p>Expertly crafted tours to Norway. <span class="blue">10 days</span> of admiring nordic cities. fjords, and waterfalls.</p>
             </div>
-            <div class="general info">
+            <div class="general-info">
                 <p> We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the
                     entire country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.</p>
                 <p> The program is carefully thought out, there are no more than 10 people in each group plus an
@@ -51,19 +55,19 @@
             <div class="instruction">
                 <article class="first">
                     <img src="image/image_zero-one.png" alt="first point">
-                    <h3>Contact us</h3>
+                    <h3 id="h3">Contact us</h3>
                     <p>Some tour conditions may be changed according to the season. To learn more about the program,
                         please contact us.</p>
                 </article>
                 <article class="second">
                     <img src="image/image_zero-two.png" alt="second point">
-                    <h3>Pick a date</h3>
+                    <h3 id="h3">Pick a date</h3>
                     <p>We conduct tours all year round, almost every week, but the most comfortable weather for
                         sightseeing is in summer.</p>
                 </article>
                 <article class="third">
                     <img src="image/image_zero-three.png" alt="third point">
-                    <h3>Start your jorney</h3>
+                    <h3 id="h3">Start your jorney</h3>
                     <p>If necessary, we help you apply for a visa to Norway, as well as advise what things you should
                         take with you.</p>
                 </article>
@@ -91,8 +95,8 @@
             </article>
         </div>
         <nav>
-            <img src="image/logo_Norway.png" alt="company's logo">
-            <div class="footer_logo">Norway</div>
+            <div class="logo">Norway</div>
+             <img src="image/logo_Norway.png" alt="company's logo">
             <ul class="footer_menu">
                 <li><a href="#info">About Us</a></li>
                 <li><a href="#places">Itinerary</a></li>
@@ -102,14 +106,15 @@
                 <li><a href="#contacts">Join Us</a></li>
             </ul>
             <ul class="icons_menu">
-                <li><a href="https://www.facebook.com/" id="facebook"><img src="image/facebook-icon.png" alt="facebook-icon"></a></li>
+                <li><a href="https://www.facebook.com/" id="facebook"><img src="image/facebook-icon.png"
+                            alt="facebook-icon"></a></li>
                 <li><a href="https://www.instagram.com/"><img src="image/instagram-icon.png" alt="instagram-icon"></a>
                 </li>
                 <li><a href="https://www.youtube.com/"><img src="image/youtube-icon.png" alt="youtube-icon"></a></li>
             </ul>
         </nav>
     </footer>
-     <!--Halyna Berdyk-->>
+    <!--Halyna Berdyk-->>
 </body>
 
 </html>
