added revisions to css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <h2>YOUR PERFECT JORNEY TO</h2>
+            <p id="subtitle">YOUR PERFECT JORNEY TO<p>
             <h1>Norway</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
