added new section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <p> The program is carefully thought out, there are no more than 10 people in each group plus an
                     English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
             </div>
+        </section>
+            <section class="info-instruction">
             <div class="instruction">
                 <article class="first">
                     <img src="image/image_zero-one.png" alt="first point">
