added new footer

--- a/footer.html
+++ b/footer.html
@@ -8,38 +8,41 @@
 </head>
 
 <body>
-    <footer>
-        <div class="contact_info" id="contact">
+   <footer>
+        <div class="contact-info" id="contact">
             <article class="email">
-                <img src="image/e-mail-icon.png" alt="email">
+                <img src="img/e-mail-icon.png" alt="email">
                 <h3>Write Us</h3>
                 <p><a href="mailto:galya.berdik@gmail.com">norway-tour@email.com</a></p>
             </article>
             <article class="location">
-                <img src="image/location-icon.png" alt="location" <h3>Visit Us</h3>
+                <img src="img/location-icon.png" alt="location">
+                <h3>Visit Us</h3>
                 <p>Tollbugata 15C, 0152 Oslo</p>
             </article>
             <article class="phone">
-                <img src="image/phone-icon.png" alt="phone">
+                <img src="img/phone-icon.png" alt="phone">
+                <h3>Call Us</h3>
                 <p><a href="tel:+380989654568">+1(234)5678900</a></p>
             </article>
         </div>
         <nav>
-            <img src="image/logo_Norway.png"><br>
-            <div class="footer_logo">Norway</div>
-            <ul class="footer_menu">
+            <img src="img/logo_norway.png" alt="company's logo">
+            <div class="logo">Norway</div>
+            <ul class="main-menu">
                 <li><a href="#info">About Us</a></li>
                 <li><a href="#places">Itinerary</a></li>
-                <li><a href="#testimontials">Testimonials</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#facebook">Blog</a></li>
                 <li><a href="#contact">Contacts</a></li>
                 <li><a href="#contacts">Join Us</a></li>
             </ul>
-            <ul class="icons_menu">
-                <li><a href="https://www.facebook.com/"><img src="image/facebook-icon.png" alt="facebook-icon"></a></li>
-                <li><a href="https://www.instagram.com/"><img src="image/instagram-icon.png" alt="instagram-icon"></a>
+            <ul class="icons-menu">
+                <li><a href="https://www.facebook.com/" id="facebook"><img src="img/facebook-icon.png"
+                            alt="facebook-icon"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="img/instagram-icon.png" alt="instagram-icon"></a>
                 </li>
-                <li><a href="https://www.youtube.com/"><img src="image/youtube-icon.png" alt="youtube-icon"></a></li>
+                <li><a href="https://www.youtube.com/"><img src="img/youtube-icon.png" alt="youtube-icon"></a></li>
             </ul>
         </nav>
     </footer>
