--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 </head>
 
 <body>
-    <!--Halyna Berdyk-->
     <header>
         <nav>
-
             <div class="logo">
-                <img src="image/logo_Norway.png" alt="company's logo">
+                <img src="img/logo_norway.png" alt="company's logo">
             </div>
-            <ul class="menu">
+            <ul class="main-menu">
                 <li><a href="#info">About Us</a></li>
                 <li><a href="#places">Itinerary</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
@@ -27,24 +25,25 @@
             </ul>
         </nav>
         <div class="banner">
-            <p id="subtitle">YOUR PERFECT JORNEY TO<p>
+            <p id="subtitle">YOUR PERFECT JORNEY TO</p>
             <h1>Norway</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <article>
+            <div class="trip">
                 <p>Next Trip to Norway</p>
                 <p>$2300 | 17 NOV. - 22 NOV.</p>
                 <p>10 days of travel in Norway</p>
                 <p><a href="#places">Read more</a></p>
-            </article>
+            </div>
         </div>
     </header>
     <main>
         <section class="info" id="info">
             <h2>ABOUT US</h2>
-            <div class="base-info">
-                <p>Expertly crafted tours to Norway. <span class="blue">10 days</span> of admiring nordic cities. fjords, and waterfalls.</p>
+            <div class="basic-info">
+                <p>Expertly crafted tours to Norway. <span class="blue">10 days</span> of admiring nordic cities.
+                    fjords, and waterfalls.</p>
             </div>
             <div class="general-info">
                 <p> We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the
@@ -53,70 +52,26 @@
                     English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
             </div>
         </section>
-            <section class="info-instruction">
+        <div class="info-instruction">
             <div class="instruction">
                 <article class="first">
-                    <img src="image/image_zero-one.png" alt="first point">
-                    <h3 id="h3">Contact us</h3>
+                    <img src="img/image_zero-one.png" alt="first point">
+                    <h3>Contact us</h3>
                     <p>Some tour conditions may be changed according to the season. To learn more about the program,
                         please contact us.</p>
                 </article>
                 <article class="second">
-                    <img src="image/image_zero-two.png" alt="second point">
-                    <h3 id="h3">Pick a date</h3>
+                    <img src="img/image_zero-two.png" alt="second point">
+                    <h3>Pick a date</h3>
                     <p>We conduct tours all year round, almost every week, but the most comfortable weather for
                         sightseeing is in summer.</p>
                 </article>
                 <article class="third">
-                    <img src="image/image_zero-three.png" alt="third point">
-                    <h3 id="h3">Start your jorney</h3>
+                    <img src="img/image_zero-three.png" alt="third point">
+                    <h3>Start your jorney</h3>
                     <p>If necessary, we help you apply for a visa to Norway, as well as advise what things you should
                         take with you.</p>
                 </article>
             </div>
-        </section>
-    </main>
-    <!--Halyna Berdyk-->
-    <!--Halyna Berdyk-->>
-    <footer>
-        <div class="contact_info" id="contact">
-            <article class="email">
-                <img src="image/e-mail-icon.png" alt="email">
-                <h3>Write Us</h3>
-                <p><a href="mailto:galya.berdik@gmail.com">norway-tour@email.com</a></p>
-            </article>
-            <article class="location">
-                <img src="image/location-icon.png" alt="location">
-                <h3>Visit Us</h3>
-                <p>Tollbugata 15C, 0152 Oslo</p>
-            </article>
-            <article class="phone">
-                <img src="image/phone-icon.png" alt="phone">
-                <h3>Call Us</h3>
-                <p><a href="tel:+380989654568">+1(234)5678900</a></p>
-            </article>
         </div>
-        <nav>
-            <div class="logo">Norway</div>
-             <img src="image/logo_Norway.png" alt="company's logo">
-            <ul class="footer_menu">
-                <li><a href="#info">About Us</a></li>
-                <li><a href="#places">Itinerary</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#facebook">Blog</a></li>
-                <li><a href="#contact">Contacts</a></li>
-                <li><a href="#contacts">Join Us</a></li>
-            </ul>
-            <ul class="icons_menu">
-                <li><a href="https://www.facebook.com/" id="facebook"><img src="image/facebook-icon.png"
-                            alt="facebook-icon"></a></li>
-                <li><a href="https://www.instagram.com/"><img src="image/instagram-icon.png" alt="instagram-icon"></a>
-                </li>
-                <li><a href="https://www.youtube.com/"><img src="image/youtube-icon.png" alt="youtube-icon"></a></li>
-            </ul>
-        </nav>
-    </footer>
-    <!--Halyna Berdyk-->>
-</body>
-
-</html>
+        
