--- a/index.html
+++ b/index.html
@@ -36,18 +36,21 @@
                 <p>10 days of travel in Norway</p>
                 <p><a href="#places">Read more</a></p>
             </div>
+            <br>
         </div>
     </header>
     <main>
         <section class="info" id="info">
-            <h2>ABOUT US</h2>
             <div class="basic-info">
+                <br>
+                 <h2>ABOUT US</h2>
                 <p>Expertly crafted tours to Norway. <span class="blue">10 days</span> of admiring nordic cities.
                     fjords, and waterfalls.</p>
             </div>
             <div class="general-info">
                 <p> We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the
                     entire country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.</p>
+                    <br>
                 <p> The program is carefully thought out, there are no more than 10 people in each group plus an
                     English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
             </div>
@@ -73,5 +76,8 @@
                         take with you.</p>
                 </article>
             </div>
+            <br>
         </div>
-        
+        </main>
+        </body>
+        </html>
