--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#facebook">Blog</a></li>
                 <li><a href="#contact">Contacts</a></li>
-                <li><a href="#contacts">Join Us</a></li>
+                <li class="button"><a href="#contacts">Join Us</a></li>
             </ul>
         </nav>
         <div class="banner">
             <p id="subtitle">YOUR PERFECT JORNEY TO</p>
             <h1>Norway</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <div class="trip">
-                <p>Next Trip to Norway</p>
-                <p>$2300 | 17 NOV. - 22 NOV.</p>
-                <p>10 days of travel in Norway</p>
-                <p><a href="#places">Read more</a></p>
+            <div class="promo">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mB1dE0FotdY?start=10"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="trip">
+                    <p>Next Trip to Norway</p>
+                    <p>$2300 | 17 NOV. - 22 NOV.</p>
+                    <p>10 days of travel in Norway</p>
+                    <p><a href="#places">Read more</a></p>
+                </div>
             </div>
             <br>
         </div>
@@ -42,15 +45,13 @@
     <main>
         <section class="info" id="info">
             <div class="basic-info">
-                <br>
-                 <h2>ABOUT US</h2>
+                <h2>ABOUT US</h2>
                 <p>Expertly crafted tours to Norway. <span class="blue">10 days</span> of admiring nordic cities.
                     fjords, and waterfalls.</p>
             </div>
             <div class="general-info">
                 <p> We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the
                     entire country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.</p>
-                    <br>
                 <p> The program is carefully thought out, there are no more than 10 people in each group plus an
                     English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
             </div>
@@ -78,6 +79,7 @@
             </div>
             <br>
         </div>
-        </main>
-        </body>
-        </html>
+    </main>
+</body>
+
+</html>
