added footer css

--- a/footer.html
+++ b/footer.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index-footer.css">
     <title>Document</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/index-footer.css">
 </head>
 
 <body>
     <footer>
-        <div class="contact-info" id="contact">
+        <section class="connection" id="connection">
+        <div class="contact-info">
             <article class="email">
                 <img src="img/email_white.svg" alt="Email">
                 <h3>Write Us</h3>
@@ -27,6 +29,8 @@
                 <p><a href="tel:+380989654568">+1(234)5678900</a></p>
             </article>
         </div>
+        </section>
+        <section id="footer-nav">
         <nav>
             <div class="footer-nav">
                 <div class="footer-logo">
@@ -37,13 +41,22 @@
                     <li><a href="#places">Itinerary</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#facebook">Blog</a></li>
-                    <li><a href="#contact">Contacts</a></li>
+                    <li><a href="#connections">Contacts</a></li>
                     <li><a href="#contacts">Join Us</a></li>
                 </ul>
             </div>
         </nav>
         <div class="social-icons">
-        </div>
+            <br/>
+<div align="center" class="socialbtns">
+<ul>
+<li><a href="https://www.facebook.com/" class="fa fa-lg fa-facebook" id="facebook"></a></li>
+<li><a href="https://www.instagram.com/" class="fa fa-lg fa-instagram"></a></li>
+<li><a href="https://www.youtube.com/" class="fa fa-lg fa-youtube"></a></li>
+</ul>
+</div>
+
+        </section>
     </footer>
 </body>
 
